--- a/src/css/list-groups.css
+++ b/src/css/list-groups.css
@@ -6,6 +6,7 @@
 
 .form-check-input:checked + .form-checked-content {
   opacity: .5;
+  text-decoration: line-through !important;
 }
 
 .form-check-input-placeholder {
